# drf-api-custom-auth-blog

./: README.md  docker-compose.yml  heroku.yml  pyproject.toml  requirements.txt  steps.md
blog_project/: .env  settings.py  urls.py
post/: models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
post/migrations/: 0001_initial.py
users/: views.py
users/migrations/: 0001_initial.py
